--- a/Contact.html
+++ b/Contact.html
@@ -55,12 +55,35 @@ function carousel() {
   <input type="text" id="fphone" cell="Enter phoneNumber" placeholder="Enter phoneNumber..">
   <label for="area" >Location</label>
   <input type="text" id="area" geographical="Enter Location" placeholder="Enter Location..">
-  <label for ="country">Country</label>
-  <select id="country" name="country">
-    <option value="kenya">Kenya</option>
-    <option value="rwanda">Rwanda</option>
-    <option value="uganda">Uganda</option>
- </select>
+ <input id ="submit" type = "button" onclick="display()" value='Submit'/>
+function checkOut(){
+    var CompanyName;
+    var phoneNumber;
+    var location;
+    function getCompanyName(){
+        return document.getElementById("company").value
+        }
+    function getphoneNumber(){
+        return document.getElementById("phone").value
+        }
+    function getLocation(){
+        return document.getElementById("location").value
+
+    }
+    document.getElementById("submit").addEventListener('click',function (display){
+    display.preventDefault();
+    company = getCompanyName()
+    phoneNumber = getphoneNumber()
+    location = getLocation()
+    alert(`your company${CompanyName},phone number${phoneNumber},and location${Location}`)
+}
+
+
+    document.getElementById("form").submit();
+
+   });
+ }
+
 </div>
 </body>
 </html>
