--- a/css.html
+++ b/css.html
@@ -1,4 +1,4 @@
-input[type=text], select,textarea{
+{% comment %} input[type=text], select,textarea{
     width:100%;
     padding:12px;
     border:1px solid gray;
@@ -8,4 +8,4 @@ input[type=text], select,textarea{
     margin-bottom:16px;
     resize:vertical
 
-}
+} {% endcomment %}
